@@ -1,0 +1,23 @@
+<?xml version="1.0"?>
+
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+
+<!--
+    Hex mode by Andre Kaplan.
+    To be used in conjunction with the Hex plugin.
+-->
+
+<MODE>
+    <RULES DEFAULT="LITERAL1">
+        <WHITESPACE> </WHITESPACE>
+        <WHITESPACE>	</WHITESPACE>
+
+        <MARK_PREVIOUS
+            TYPE="KEYWORD1"
+            AT_LINE_START="TRUE"
+            EXCLUDE_MATCH="FALSE"
+        >:</MARK_PREVIOUS>
+
+        <EOL_SPAN TYPE="KEYWORD2">;</EOL_SPAN>
+    </RULES>
+</MODE>
